[package]
name = "fuel-merkle"
version = "0.1.0"
authors = ["Brandon Vrooman <brandon.vrooman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "*"
generic-array = "*"
sha2 = "*"

[dev-dependencies]
hex = "*"
