[package]
name = "fuel-merkle-test-helpers"
version = "0.1.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2018"

[dependencies]
fuel-merkle = { path = "../" }
digest = "~0.9.0"
sha2 = "~0.9.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
thiserror = "1.0"
rand = "0.8"
hex = "0.4"

[[bin]]
name = "write-bmt-test-suite"
path = "src/suites/binary.rs"
